--- a/sanity/package.json
+++ b/sanity/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "slicks-slices-backend",
+  "name": "pizza-slices-backend",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Wes Bos <wesbos@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint .",
